# tensorflow_object_detector

./: CMakeLists.txt  README.md  package.xml
config/: config.yaml  display.rviz
detector/: CMakeLists.txt
detector/launch/: cv_camera_detector.launch  object_detect.launch  usb_cam_detector.launch
detector/scripts/: detect_ros.py
launch/: object_detect.launch  usb_cam_detector.launch
scripts/: convert.py  detect_ros.py  eat_2g_ram.sh  eat_4g_ram.sh  security_stuff.sh
scripts/object_detection/: detect.py~  testcvbridge.py
